--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
 	<title>PennyPost</title>
+
+	<link rel="stylesheet" href="css/home-style.css"></link>
+	<link rel="stylesheet" href="css/newcard.css"></link>
+
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
 	
 	<script src="js/app.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
+	<script src="js/controllers//NewcardCtrl.js"></script>
 
 </head>
 <body ng-app="PennyPost">
