postcard directive in progress

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
 	
+
 	<script src="js/app.js"></script>
+	<script src="js/directives/card.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
-	<script src="js/controllers//NewcardCtrl.js"></script>
+	<script src="js/controllers/NewcardCtrl.js"></script>
+
 
 </head>
 <body ng-app="PennyPost">
