--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
-	
+
 
 	<script src="js/app.js"></script>
 	<script src="js/directives/card.js"></script>
@@ -19,5 +19,15 @@
 </head>
 <body ng-app="PennyPost">
 	<ng-view></ng-view>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-69995610-1', 'auto');
+  ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
