--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 
 	<link rel="stylesheet" href="css/home-style.css"></link>
 	<link rel="stylesheet" href="css/newcard.css"></link>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
-	
+
 
 	<script src="js/app.js"></script>
 	<script src="js/directives/card.js"></script>
