--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<script src="js/app.js"></script>
 	<script src="js/directives/card.js"></script>
+	<script src="js/directives/draggable.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
 	<script src="js/controllers/NewcardCtrl.js"></script>
 	<script src="js/controllers/SidenavCtrl.js"></script>
