--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
+	<script src="node_modules/angular-animate/angular-animate.js"></script>
 
 
 	<script src="js/app.js"></script>
