--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 	<link rel="stylesheet" href="css/home-style.css"></link>
 	<link rel="stylesheet" href="css/newcard.css"></link>
 	<link rel="stylesheet" href="css/sidenav.css"></link>
+	<link rel="stylesheet" href="css/card-preview.css"></link>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="node_modules/angular-route/angular-route.js"></script>
-	<script src="node_modules/angular-animate/angular-animate.js"></script>
-
 
 	<script src="js/app.js"></script>
 	<script src="js/directives/card.js"></script>
 	<script src="js/directives/draggable.js"></script>
+	<script src="js/directives/scrollPosition.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
 	<script src="js/controllers/NewcardCtrl.js"></script>
 	<script src="js/controllers/SidenavCtrl.js"></script>
